# ai-dev-team-system

./: .gitignore  AGENT_COMPLETION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FUNCTIONAL_TECHNICAL_SPEC.md  MAINTENANCE_CHECKLIST.md  MEMORY_SYSTEM_SUMMARY.md  OPTIMIZATION_SUMMARY.md  Procfile  README.md  SETUP.md  SSH_KEY_SETUP.md  alembic.ini  demo.py  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  render.yaml  requirements-basic.txt  requirements-minimal.txt  requirements-simple.txt  requirements.txt  start.py  🚀 Agentic Agile System_ Full Recap & Blueprint.txt
.cursor/rules/: my-first-rule.mdc  my-fourth-rule.mdc  my-second-rule.mdc  my-third-rule.mdc
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-update.yml  ci-cd.yml  memory-backup.yml  release.yml
agents/: AGENT_BEHAVIORS.md
agents/ad/: Dockerfile  __init__.py  config.py  docker-compose.yml  requirements.txt
agents/ar/: Dockerfile  README.md  __init__.py  claude_client.py  config.py  docker-compose.yml  (+1 more)
alembic/: env.py
app/: __init__.py  config.py  main.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
k8s/: README.md  api-hub-configmap.yaml  api-hub-deployment.yaml  api-hub-secrets.yaml  api-hub-service.yaml  kustomization.yaml  pm-agent-configmap.yaml  pm-agent-deployment.yaml
scripts/: backup_memory.py  generate_secrets.py  send_slack_test.py  setup_production_secrets.bat  setup_scheduled_updates.bat  setup_ssh_keys.bat  setup_ssh_keys.ps1  update_system.py  validate_env_and_services.py
tests/: __init__.py  test_agents.py
(+91 files in other folders)
